Luckyspin 03 works but I don't know how to to get TextTransform to work

--- a/LuckySpin/Views/Spinner/Index.cshtml
+++ b/LuckySpin/Views/Spinner/Index.cshtml
@@ -1,14 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@model LuckySpin.Models.Spin
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Lucky Spin</title>
-    <link rel="stylesheet" href="/luckyStyles.css">
+   <meta charset="utf-8" />
+   <title>Lucky Spin</title>
+   <link rel="stylesheet" href="/luckyStyles.css">
 </head>
 <body>
-    <button onclick='history.go(0)'>Spin</button>
-    <div>@ViewBag.A</div><div>@ViewBag.B</div><div>@ViewBag.C</div>
-    <h1> Lucky @ViewBag.luck </h1>
-    <img src="/Images/LuckySpinCoins.jpg" alt="Coins" style="display:@ViewBag.ImgDisplay" />
+   <button onclick='history.go(0)'>Spin</button>
+   <div>@Model.A</div><div>@Model.B</div><div>@Model.C</div>
+   <h1> Lucky @Model.luck </h1>
+   <img src="/Images/LuckySpinCoins.jpg" alt="Coins" style="display:@Model.ImgDisplay" />
 </body>
 </html>
