--- a/LuckySpin/Views/Spinner/Index.cshtml
+++ b/LuckySpin/Views/Spinner/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model LuckySpin.Models.Spin
+﻿
+@inject LuckySpin.Models.TextTransformService numberToText
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +10,7 @@
 <body>
    <button onclick='history.go(0)'>Spin</button>
    <div>@Model.A</div><div>@Model.B</div><div>@Model.C</div>
-   <h1> Lucky @Model.luck </h1>
+   <h1> Lucky  @LuckySpin.Models.TextTransformService.numberToText(7)</h1>
    <img src="/Images/LuckySpinCoins.jpg" alt="Coins" style="display:@Model.ImgDisplay" />
 </body>
 </html>
